Masking: Enabling Motion Blur overrides the Feather Falloff #56877

Closed
opened 2018-09-22 15:03:21 +02:00 by Sebastian Koenig · 5 comments

System Information
elementaryOS 0.4.1, GTX1080

Blender Version
Broken: 2.79.6, 104fb1f

Short description of error
Enabling the Motion Blur option of the Mask node in Compositor overrides the Feather Falloff type, which you can set per MaskLayer in Image / Clip Editor. With Motion Blur enabled, the falloff is always the default type ('SMOOTH').

Exact steps for others to reproduce the error
Open this blendfile feather_falloff_mblur.blend.
In the Mask node enable Motion Blur, then disable it again. Note how the mask's feather falloff looks totally different, even though shutter speed is set to 0.0001. I suspect that in COM_MaskNode.cpp the feather falloff is somehow ignored when MASK_MOTION_BLUR is enabled. Or something like that. I should learn C++ ...

**System Information** elementaryOS 0.4.1, GTX1080 **Blender Version** Broken: 2.79.6, 104fb1f **Short description of error** Enabling the Motion Blur option of the Mask node in Compositor overrides the Feather Falloff type, which you can set per MaskLayer in Image / Clip Editor. With Motion Blur enabled, the falloff is always the default type ('SMOOTH'). **Exact steps for others to reproduce the error** Open this blendfile [feather_falloff_mblur.blend](https://archive.blender.org/developer/F4785723/feather_falloff_mblur.blend). In the Mask node enable Motion Blur, then disable it again. Note how the mask's feather falloff looks totally different, even though shutter speed is set to 0.0001. I suspect that in COM_MaskNode.cpp the feather falloff is somehow ignored when MASK_MOTION_BLUR is enabled. Or something like that. I should learn C++ ...
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2018-09-23 10:09:33 +02:00

@Sergey, I guess that one is for you? ;)

@Sergey, I guess that one is for you? ;)

This issue was referenced by 44e9fe024b

This issue was referenced by 44e9fe024bba014aa49b3a106fe89aa0b6e610cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56877
No description provided.