Fix T56877: Enabling mask Motion Blur overrides the Feather Falloff

Compositor makes a copy of mask before sampling the mask on different
time steps. The copy of layers did not copy falloff Settings.